[package]
name = "parfet"
version = "0.1.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
edition = "2018"

[dependencies]
bytecount = "0.6.2"
memchr = "2.3.4"

[dev-dependencies]
criterion = "0.3.4"

[features]
alloc = []

[profile.bench]
debug = true
lto = true
codegen-units = 1

[[test]]
name = "arithmetic"

[[test]]
name = "json"

[[bench]]
name = "arithmetic"
path = "benches/arithmetic.rs"
harness = false

[[bench]]
name = "json"
path = "benches/json.rs"
harness = false